contador_ip/contador_ad/contador_ad.sdk/.metadata/.plugins/org.eclipse.cdt.ui/contador_ad.build.log
11:28:46 **** Auto Build of configuration Debug for project contador_ad ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/contador_ad.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/contador_ad.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../contador_ad_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/contador_ad.d" -MT"src/contador_ad.o" -o "src/contador_ad.o" "../src/contador_ad.c"
../src/contador_ad.c: In function 'main':
../src/contador_ad.c:15:5: warning: implicit declaration of function 'SUM_IP_mWriteReg'; did you mean 'CONT_IP_mWriteReg'? [-Wimplicit-function-declaration]
     SUM_IP_mWriteReg(XPAR_SUM_IP_S_AXI_BASEADDR, SUM_IP_S_AXI_SLV_REG0_OFFSET, opA);
     ^~~~~~~~~~~~~~~~
     CONT_IP_mWriteReg
../src/contador_ad.c:15:22: error: 'XPAR_SUM_IP_S_AXI_BASEADDR' undeclared (first use in this function); did you mean 'XPAR_CONT_IP_0_S_AXI_BASEADDR'?
     SUM_IP_mWriteReg(XPAR_SUM_IP_S_AXI_BASEADDR, SUM_IP_S_AXI_SLV_REG0_OFFSET, opA);
                      ^~~~~~~~~~~~~~~~~~~~~~~~~~
                      XPAR_CONT_IP_0_S_AXI_BASEADDR
../src/contador_ad.c:15:22: note: each undeclared identifier is reported only once for each function it appears in
../src/contador_ad.c:15:50: error: 'SUM_IP_S_AXI_SLV_REG0_OFFSET' undeclared (first use in this function); did you mean 'CONT_IP_S_AXI_SLV_REG0_OFFSET'?
     SUM_IP_mWriteReg(XPAR_SUM_IP_S_AXI_BASEADDR, SUM_IP_S_AXI_SLV_REG0_OFFSET, opA);
                                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                                  CONT_IP_S_AXI_SLV_REG0_OFFSET
../src/contador_ad.c:15:80: error: 'opA' undeclared (first use in this function)
     SUM_IP_mWriteReg(XPAR_SUM_IP_S_AXI_BASEADDR, SUM_IP_S_AXI_SLV_REG0_OFFSET, opA);
                                                                                ^~~
../src/contador_ad.c:16:50: error: 'SUM_IP_S_AXI_SLV_REG1_OFFSET' undeclared (first use in this function); did you mean 'SUM_IP_S_AXI_SLV_REG0_OFFSET'?
     SUM_IP_mWriteReg(XPAR_SUM_IP_S_AXI_BASEADDR, SUM_IP_S_AXI_SLV_REG1_OFFSET, opB);
                                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                                  SUM_IP_S_AXI_SLV_REG0_OFFSET
../src/contador_ad.c:16:80: error: 'opB' undeclared (first use in this function); did you mean 'opA'?
     SUM_IP_mWriteReg(XPAR_SUM_IP_S_AXI_BASEADDR, SUM_IP_S_AXI_SLV_REG1_OFFSET, opB);
                                                                                ^~~
                                                                                opA
../src/contador_ad.c:17:5: error: 'res' undeclared (first use in this function)
     res = SUM_IP_mReadReg(XPAR_SUM_IP_S_AXI_BASEADDR, SUM_IP_S_AXI_SLV_REG2_OFFSET);
     ^~~
../src/contador_ad.c:17:11: warning: implicit declaration of function 'SUM_IP_mReadReg'; did you mean 'CONT_IP_mReadReg'? [-Wimplicit-function-declaration]
     res = SUM_IP_mReadReg(XPAR_SUM_IP_S_AXI_BASEADDR, SUM_IP_S_AXI_SLV_REG2_OFFSET);
           ^~~~~~~~~~~~~~~
           CONT_IP_mReadReg
../src/contador_ad.c:17:55: error: 'SUM_IP_S_AXI_SLV_REG2_OFFSET' undeclared (first use in this function); did you mean 'SUM_IP_S_AXI_SLV_REG1_OFFSET'?
     res = SUM_IP_mReadReg(XPAR_SUM_IP_S_AXI_BASEADDR, SUM_IP_S_AXI_SLV_REG2_OFFSET);
                                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                                       SUM_IP_S_AXI_SLV_REG1_OFFSET
../src/contador_ad.c:11:6: warning: unused variable 'comando' [-Wunused-variable]
  int comando;
      ^~~~~~~
../src/contador_ad.c:10:6: warning: unused variable 'cuenta' [-Wunused-variable]
  int cuenta;
      ^~~~~~
src/subdir.mk:21: fallo en las instrucciones para el objetivo 'src/contador_ad.o'
make: *** [src/contador_ad.o] Error 1

11:28:46 Build Finished (took 796ms)

